image-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-app
  template:
    metadata:
      labels:
        app: project-app
    spec:
      containers:
        - name: project-app
          image: mahansa/project-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: image-cache
              mountPath: "/app/cache"
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "chmod 777 /app/cache"]
      volumes:
        - name: image-cache
          persistentVolumeClaim:
            claimName: image-pvc
      nodeSelector:
        kubernetes.io/hostname: k3d-k3s-default-agent-0
