image-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-app-service
spec:
  selector:
    app: project-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
